# ASI_01_GR9

./: .telemetry  README.md  Untitled.ipynb  app.py  app_api.py  launcher.py  prompty.txt  pyproject.toml  requirements.txt  session_store.db  stats.json  streamlit.py
AutogluonModels/ag-20240615_122301/: learner.pkl
AutogluonModels/ag-20240615_122301/models/: trainer.pkl
AutogluonModels/ag-20240615_123610/: learner.pkl  metadata.json  predictor.pkl
AutogluonModels/ag-20240615_123610/models/: trainer.pkl
AutogluonModels/ag-20240615_132114/: learner.pkl  predictor.pkl
AutogluonModels/ag-20240615_132114/models/: trainer.pkl
conf/: api.yml  logging.yml
conf/base/: catalog.yml  logging.yml  parameters.yml
data/01_raw/: AOI Statistics - Trial Summary.csv  Event Statistics - Trial Summary.csv  hyperparameters.json
data/06_models/: best_model.pkl
data/06_models/encoders/: dummy_encoder.pkl  scaler_encoder.pkl
docs/source/: conf.py  index.rst
src/asi_01_gr9/: __init__.py  __main__.py  pipeline_registry.py
src/asi_01_gr9/pipelines/: __init__.py
wandb/run-20240522_180608-pknszh52/: run-pknszh52.wandb
wandb/run-20240522_180608-pknszh52/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20240613_212147-16o7yr7c/: run-16o7yr7c.wandb
wandb/run-20240613_212147-16o7yr7c/files/: config.yaml
wandb/run-20240613_212254-758uyx73/files/: config.yaml  wandb-metadata.json
wandb/run-20240613_212724-sl5wyh37/: run-sl5wyh37.wandb
wandb/run-20240613_212724-sl5wyh37/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20240613_213059-4id6aeaj/: run-4id6aeaj.wandb
wandb/run-20240613_213527-gi0xtcu1/: run-gi0xtcu1.wandb
wandb/run-20240613_214346-25vhlnph/: run-25vhlnph.wandb
wandb/run-20240613_214454-x7t70sen/: run-x7t70sen.wandb
wandb/run-20240613_215849-ew0aulpy/: run-ew0aulpy.wandb
wandb/run-20240613_220427-r71pz9mv/: run-r71pz9mv.wandb
wandb/run-20240613_220731-gpztpjry/: run-gpztpjry.wandb
wandb/run-20240613_220754-xy1sii8j/: run-xy1sii8j.wandb
wandb/run-20240613_221314-w9ayefq8/: run-w9ayefq8.wandb
wandb/run-20240615_141342-2h9okwpm/: run-2h9okwpm.wandb
wandb/run-20240615_142249-nlbobqqh/: run-nlbobqqh.wandb
wandb/run-20240615_143600-7zxammxw/: run-7zxammxw.wandb
wandb/run-20240615_152111-1qztn9wz/: run-1qztn9wz.wandb
(+249 files in other folders)
