[tool.poetry]
name = "ASI_01_GR9"
version = "0.1.0"
description = ""
authors = ["Pawel Gawrysiak <pawelgawrysiak1230@example.com>"]

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project]
name = "asi_01_gr9"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
asi-01-gr9 = "asi_01_gr9.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.18.0", "sphinx~=3.4.3", "sphinx_rtd_theme==0.5.1", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.11.1", "sphinx_copybutton==0.3.1", "ipykernel>=5.3, <7.0", "Jinja2<3.1.0", "myst-parser~=0.17.2",]

[tool.poetry.dependencies]
python = "^3.8"  # Wersja Pythona, którą używasz
kedro = "^0.18.0"  # Wersja Kedro, którą używasz
flask = "^2.0.0"  # Dodaj Flask, jeśli używasz go w swoim projekcie

[tool.kedro]
package_name = "asi_01_gr9"
project_name = "asi_01_gr9"
kedro_init_version = "0.19.3"
tools = [ "Custom Logging", "Documentation", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "asi_01_gr9.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
